--- a/src/app/home/components/courses/course-detail/course-detail.component.html
+++ b/src/app/home/components/courses/course-detail/course-detail.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
-<app-nav></app-nav>
+<!-- <app-header></app-header>
+<app-nav></app-nav> -->
 <main>
     <section class="introduction-container">
         <div class="introduction-title">
