--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -2,8 +2,6 @@
 
 <div class="container">
     <app-nav class="navbar"></app-nav>
-    <app-hero></app-hero>
-    <app-courses id="cursos"></app-courses>
-    <app-contact id="contactanos"></app-contact>
+    <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
