--- a/src/app/dashboard/components/users/users.component.html
+++ b/src/app/dashboard/components/users/users.component.html
@@ -2,22 +2,26 @@
     <h2>Gestión de usuarios</h2>
     <mat-form-field appearance="legacy" class="search">
         <mat-label>Buscar</mat-label>
-        <input matInput placeholder="Placeholder">
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Placeholder">
         <mat-icon matSuffix>search</mat-icon>
         <mat-hint>puede buscar por cualquier campo</mat-hint>
       </mat-form-field>
       <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="nombres">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombres">Nombres</th>
-          <td mat-cell *matCellDef="let element">{{ element.nombres }}</td>
-        </ng-container>
         <ng-container matColumnDef="apellidos">
           <th mat-header-cell *matHeaderCellDef mat-sort-header id="apellidos">Apellidos</th>
           <td mat-cell *matCellDef="let element">{{ element.apellidos }}</td>
         </ng-container>
+        <ng-container matColumnDef="nombres">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombres">Nombres</th>
+          <td mat-cell *matCellDef="let element">{{ element.nombres }}</td>
+        </ng-container>
         <ng-container matColumnDef="correo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Correo electrónico</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Correo</th>
           <td mat-cell *matCellDef="let element">{{ element.correo }}</td>
+        </ng-container>
+        <ng-container matColumnDef="perfil">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Perfil</th>
+          <td mat-cell *matCellDef="let element">{{ element.perfil }}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
