--- a/src/app/home/components/courses/course-detail/course-detail.component.html
+++ b/src/app/home/components/courses/course-detail/course-detail.component.html
@@ -1,17 +1,17 @@
 <!-- <app-header></app-header>
 <app-nav></app-nav> -->
-<main>
+<main *ngFor="let item of cursos">
     <section class="introduction-container">
         <div class="introduction-title">
-            <h1>Introducción a los Ensayos No Destructivos</h1>
+            <h1>{{item.nombre}}</h1>
             <p>Profesores <span>Alvarez Gomez, Geovanny</span></p>
         </div>
         <div class="img-container">
-            <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="">
+            <img src="{{ item.imagen }}" alt="imagen curso {{ item.nombre }}">
 
         </div>
         <div class="introduction-text">
-            <p>Uno de los aspectos básicos de la ingeniería moderna dice relación con el control de calidad de materias primas, piezas y uniones. En este sentido la aplicación de técnicas de ensayos no destructivos, ya sea basados en ultrasonido, en tintas penetrantes, corrientes parásitas, partículas magnéticas o en radiografías industriales cobra particular vigencia. En el ámbito del mantenimiento predictivo, área en que se aplican los principios de la mecánica de la fractura, es donde con mayor énfasis, se requiere de las aplicaciones de los ensayos no destructivos, constituyéndose en el pilar fundamental de los criterios de mantenimiento.</p>
+            <p>{{ item.descripcion }}</p>
         </div>
     </section>
     <section class="information-container">
@@ -28,7 +28,7 @@
                             {{panelOpenState ? 'cerrar' : 'ver'}}
                         </mat-panel-description> -->
                     </mat-expansion-panel-header>
-                        <p>Dar a conocer o reforzar a los participantes las diferentes técnicas de ensayos no destructivos (END) empleadas actualmente en la inspección, su fundamentación, importancia, aplicaciones, ventajas y desventajas, así como la normatividad aplicable, además de dar a conocer los requisitos para la capacitación, calificación y certificación de personal de END.</p>
+                        <p>{{ item.objetivo }}</p>
                 </mat-expansion-panel>
                 <mat-expansion-panel (opened)="panelOpenState = true"
                                         (closed)="panelOpenState = false">
@@ -133,4 +133,3 @@
         </div>
     </section>
 </main>
-<app-footer></app-footer>
