--- a/src/app/home/components/courses/courses.component.html
+++ b/src/app/home/components/courses/courses.component.html
@@ -1,9 +1,9 @@
 <section class="main-container">
     <h2>nuestros cursos</h2>
     <div class="courses-container">
-        <div class="single-course">
+        <div class="single-course" *ngFor="let item of cursos |async">
             <div class="course-image">
-                <img src="https://chym-elearning.com/courses/VTII/course-pic.png" alt="" loading="lazy">
+                <img src="{{ item.imagen }}" alt="" loading="lazy">
                 <span class="category">Ensayos no destructivos</span>
                 <div class="cribbon"></div>
                 <div class="course-info">
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="course-detail">
-                <h3><a routerLink="/home/detalle-curso">Inspección Visual Nivel I/II</a></h3>
+                <h3><a routerLink="/home/detalle-curso/{{ item.id }}">{{ item.nombre }}</a></h3>
                 <div class="ranking">
                     <star-rating [starType]="'svg'" [rating]="3.8" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
                     <p>80 votos | 25 visitas</p>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="single-course">
+        <!-- <div class="single-course">
             <div class="course-image">
                 <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="" loading="lazy">
                 <span class="category">Ensayos no destructivos</span>
@@ -235,6 +235,6 @@
                     <p>Profesor: <span>Geovanny Alvarez</span></p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
