--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,5 +19,10 @@ body {
     margin: 0 !important;
     padding: 0;
 }
+
+.mat-dialog-container {
+    padding: 0 !important;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
