--- a/src/app/dashboard/components/users/user-edit/user-edit.component.html
+++ b/src/app/dashboard/components/users/user-edit/user-edit.component.html
@@ -1,1 +1,67 @@
-{{ data.content.nombres }}
+<main>
+    <form [formGroup]="form" (ngSubmit)="updateUser($event)">
+      <div class="title dialog-header-close">
+        <mat-icon>person</mat-icon>
+        <h2>Editar usuario</h2>
+        <mat-icon mat-dialog-close style="color: red;">close</mat-icon>
+      </div>
+      <div class="form-inputs">
+        <mat-form-field>
+          <mat-label>Nombres</mat-label>
+          <input
+            type="text"
+            matInput
+            formControlName="nombres"
+            [value]="user.nombres"
+            [(ngModel)]="user.nombres" />
+          <mat-error *ngIf="nombresField.touched && nombresField.invalid">
+            <ng-container *ngIf="nombresField.hasError('required')">El nombre es requerido</ng-container>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Apellidos</mat-label>
+            <input
+                type="text"
+                matInput
+                formControlName="apellidos"
+                [value]="user.apellidos"
+                [(ngModel)]="user.apellidos" />
+            <mat-error *ngIf="apellidosField.touched && apellidosField.invalid">
+              <ng-container *ngIf="apellidosField.hasError('required')">El apellido es requerido</ng-container>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Correo</mat-label>
+            <input
+                type="text"
+                matInput
+                [value]="user.correo"
+                [(ngModel)]="user.correo" readonly />
+            <!-- <mat-error *ngIf="correoField.touched && correoField.invalid">
+              <ng-container *ngIf="correoField.hasError('required')">El correo es requerido</ng-container>
+              <ng-container *ngIf="correoField.hasError('email')">Correo invalido</ng-container>
+            </mat-error> -->
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Perfil</mat-label>
+            <select matNativeControl required [value]="user.perfil" [(ngModel)]="user.perfil"
+                formControlName="perfil">
+              <option value="administrador">Administrador</option>
+              <option value="profesor">Profesor</option>
+              <option value="estudiante">Estudiante</option>
+            </select>
+          </mat-form-field>
+        
+      </div>
+      <div class="buttons">
+        <button
+          type="submit"
+          mat-raised-button
+          [disabled]="form.invalid">Guardar</button>
+		<a mat-raised-button [mat-dialog-close]="data">Cancelar</a>
+      </div>
+    </form>
+  </main>
