--- a/src/app/dashboard/components/users/users.component.html
+++ b/src/app/dashboard/components/users/users.component.html
@@ -21,7 +21,7 @@
         </ng-container>
         <ng-container matColumnDef="perfil">
           <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">Perfil</th>
-          <td mat-cell *matCellDef="let element">{{ element.perfil }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.perfil |titlecase}}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
