--- a/src/app/dashboard/components/cursos/cursos.component.html
+++ b/src/app/dashboard/components/cursos/cursos.component.html
@@ -13,13 +13,31 @@
   <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombres</th>
-      <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+      <td mat-cell *matCellDef="let element" (click)="goToDetail(element.id)">{{ element.nombre }}</td>
     </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-stroked-button color="primary" (click)="openDialog(element)">
-          <mat-icon>edit</mat-icon>
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Configurar descripción general"
+          (click)="openDialog(element)">
+          <mat-icon style="color: darkgreen;">grid_on</mat-icon>
+        </button>
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Editar curso"
+          (click)="goToEdit(element)">
+          <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
+        </button>
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Ver curso"
+          (click)="goToDetail(element.id)">
+          <mat-icon style="color: black;">info</mat-icon>
         </button>
         <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
           <mat-icon>delete</mat-icon>
